<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logoImg"
        android:layout_width="395dp"
        android:layout_height="812dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/pwcamp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.988"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/button_entrar"
        android:layout_width="197dp"
        android:layout_height="0dp"
        android:layout_marginStart="107dp"
        android:layout_marginTop="551dp"
        android:layout_marginEnd="107dp"
        android:layout_marginBottom="132dp"
        android:text="@string/entrar"
        android:onClick="openNewActivity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtVersao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="165dp"
        android:layout_marginTop="672dp"
        android:layout_marginEnd="165dp"
        android:layout_marginBottom="40dp"
        android:text="@string/versao"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>